[package]
name = "tot_spec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tot_spec"
path = "bin/codegen.rs"
required-features = ["build-binary"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
prettyplease = "0.2"
convert_case = "0.6"
syn = { version = "2.0.17", features = ["full"] }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.3.0"
rust_decimal = "1.29"
syn = "*"

[features]
build-binary = ["clap"]
