[workspace]
resolver = "2"

members = [
    "tot_spec",
    "tot_spec_util",
    "tot_lang",
    "tot_eval",
    "codegen"
]

default-members = [
    "codegen"
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
