[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tot_spec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tot_spec = { path = "../tot_spec" }
serde_yaml = "0.9"