[package]
name = "codegen"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/shuoli84/tot_spec"
license = "MIT OR Apache-2.0"
description = "A code generator for json model"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tot_spec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tot_spec = { path = "../tot_spec", version = "0.1" }
serde_yaml = "0.9"
walkdir = "2.3.3"
anyhow = "1.0"
path-absolutize = "3.1"
